--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.confirmed-card,
+.death-card,
+.recovered-card {
+  border: 1px solid #000;
+  height: 150px;
+  width: 300px;
+  margin: 10px;
+  box-shadow: 0 6px 7px 3px gray;
+  font-style: italic;
+}
+
+.confirmed-card {
+  background-color: yellow;
+}
+.death-card {
+  background-color: red;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.recovered-card {
+  background-color: green;
+  color: white;
+}
+select {
+  height: 30px;
+  border: none;
+  margin: 30px;
+  padding: 7px 10px;
+}
+select option {
+  font-size: 20px;
+  border-bottom: 1px solid rgb(22, 22, 22);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: steelblue;
+}
+.form-container {
+  display: flex;
+  justify-content: center;
 }
